--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 
 <html lang="en">
     <h1 class="banner">
-        Connectel Memes 
+        Connectel Dank Memes 
     </h1>
 
     <div class="container">
