--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,11 @@
 <html lang="en">
     <h1 class="banner">
         Connectel Dank Memes 
+            <p>
+        Welcome, to jurassic park
+    </p>
     </h1>
+
 
     <div class="container">
             <ul id="memes" class='halfwidth'>
