--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,10 @@
 <html lang="en">
     <h1 class="banner">
         Connectel Dank Memes 
+
+        <p>
+            who you gonna call?
+        </p>
     </h1>
 
     <div class="container">
