--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <h1 class="banner">
         Connectel Dank Memes 
             <p>
-        Welcome, to jurassic park
+        Dragoooooooooo!!!!
     </p>
     </h1>
 
